<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >

    <android.support.v7.widget.Toolbar
        style="@style/toolbar_default"
        android:id="@+id/wims_data_toolbar">

        <ImageButton
            style="@style/back_button"
            android:id="@+id/back_button_wims_data_view"/>

        <Button
            style="@style/info_button"
            android:id="@+id/info_button_wims_data_view"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:background="@color/backgroundDefault">

        <TextView
            style="@style/text_view_heading"
            android:id="@+id/wims_name"
            android:text=""/>

        <TextView
            style="@style/text_view_table_parent_light"
            android:id="@+id/wims_no_data"
            android:paddingTop="8dp"
            android:visibility="gone"
            android:text="@string/wims_no_data_description" />

        <TableLayout
            style="@style/table_layout"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/wims_table">
        </TableLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/wims_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#AA000000"
        android:layout_weight="0.30" />

</LinearLayout>
