...
    <android.support.v7.widget.Toolbar
        style="@style/toolbar_default"
        android:id="@+id/data_view_toolbar">

        <ImageButton
            style="@style/menu_button"
            android:id="@+id/data_view_hamburger_button"/>

        <TextView
            android:id="@+id/layer_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textSize="@dimen/text_large"
            android:textColor="@color/colorTextPrimary"
            android:ellipsize="end"
            android:maxLines="1"/>

        <ImageButton
            style="@style/search_button"
            android:id="@+id/data_view_search_button"/>

    </android.support.v7.widget.Toolbar>

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize" />

    <ProgressBar
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity= "center_vertical|center_horizontal"
        android:visibility="invisible" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/gps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:onClick="currentLocation"
        android:src="@drawable/target_white"
...
