...
    <android.support.v7.widget.Toolbar
        style="@style/toolbar_default"
        android:id="@+id/wims_details_toolbar">

        <ImageButton
            style="@style/back_button"
            android:id="@+id/back_button_wims_details_view"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
            android:background="@color/backgroundDefault"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                style="@style/text_view_heading"
                android:id="@+id/wims_details_title"
                android:text=""/>

            <TextView
                style="@style/text_view_sub_heading"
                android:id="@+id/wims_details_general_title"
                android:text="@string/wims_details_general_title"/>
...
