<resources>
    <string name="app_name">myRivers</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="choose_tag">Choose a tag</string>

    <string name="drawer_cde">River Catchment Quality</string>
    <string name="drawer_wims">Water Quality Samples</string>
    <string name="drawer_permit">Pollution Licence Holders</string>
    <string name="drawer_my_area">Where am I now?</string>
    <string name="drawer_info">How it Works</string>

    <string name="marker_wims">WIMS_Point</string>
    <string name="marker_permit">Waste_Point</string>

    <string name="photo_comment">Comment: </string>
    <string name="photo_tag">Tags: </string>
    <string name="photo_date">Date Taken: </string>
    <string name="photo_item_descriptor">Image of Observation</string>

    <string name="button_desc_hamburger">Menu</string>
    <string name="button_desc_search">Search</string>
    <string name="button_desc_back">Back</string>
    <string name="button_desc_info">More Info</string>
    <string name="button_desc_full_report">Detailed Report</string>

    <string name="cde_loading_message">Loading ratings data...</string>
    <string name="cde_table_classification_value">Rating</string>
    <string name="cde_table_classification_year">Year</string>
    <string name="cde_table_classification_certainty">Certainty</string>
    <string name="cde_table_overall">Overall</string>
    <string name="cde_table_ecological">Ecological</string>
    <string name="cde_table_chemical">Chemical</string>
    <string name="cde_waterbody_id_title">Waterbody ID:</string>
    <string name="cde_classification_title">Classification</string>
    <string name="cde_rnag_title">Reasons for not achieving good</string>
    <string name="cde_objectives_title">Objectives and Predictions</string>

    <string name="cde_table_rnag_element">Element</string>
    <string name="cde_table_rnag_rating">Rating</string>
    <string name="cde_table_rnag_activity">Activity</string>
    <string name="cde_table_rnag_year">Year</string>
    <string name="cde_table_rnag_category">Category</string>

    <string name="wims_table_determinand">Determinand</string>
    <string name="wims_table_result">Result</string>
    <string name="wims_table_date">Date</string>
    <string name="wims_table_type">Type</string>

    <string name="wims_details_general_title">General</string>
    <string name="wims_details_diss_oxygen_title">Dissolved Oxygen</string>
    <string name="wims_details_oxygen_demand_title">Oxygen Demand</string>
    <string name="wims_details_nutrients_title">Nutrients</string>
    <string name="wims_details_nitrates_title">Nitrates</string>
    <string name="wims_details_phosphates_title">Phosphates</string>
    <string name="wims_details_metals_title">Metals</string>
    <string name="wims_details_solids_title">Solids</string>

    <string name="wims_no_data_description">No measurements for pH, Temperature of Water and
        Conductivity at 25C. Please click on \"More Info\" button to examine other measurements.</string>

    <string name="wims_details_no_data_description">No measurements found.
        Please click on \"Detailed Report\" button to examine full measurements history.</string>

    <string name="permit_table_effluent_type">Permit Type: </string>
    <string name="permit_table_site_type">Site Type: </string>
    <string name="permit_table_effective_date">Effective Since: </string>

    <string name="info_title"><b>myRivers v1.10</b></string>
    <string name="info_description">myRivers allows anyone to browse detailed river pollution
        reports in the UK. The available data is pulled and filtered from three different data sets,
        all provided by the Environment Agency under the terms of
        <b><a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">
            Open Government Licence v3.0</a></b>.</string>
    <string name="info_subtitle">Developed by BitBusters and Epimorphics</string>
    <string name="info_home_buttons">Home Buttons: </string>
    <string name="info_layers">Layers: </string>
    <string name="info_gpsText">
        <b>GPS Button</b>: Zoom in to your current location.
    </string>
    <string name="info_cde_description">
        <b>River Catchment Quality</b>: Displays sampling points from Catchment Data Explorer data
        set along with pollution levels.
    </string>
    <string name="info_wims_description">
        <b>Water Quality</b>: Displays sampling points from Water Quality Data Archive showing
        the latest measurements of all measured determinands.
    </string>
    <string name="info_permit_description">
        <b>Pollution Licence Holders</b>: Displays locations of water discharge permit points along
        with the holders name, type of permit and type of site.
    </string>

    <string name="my_area_title"><b>Where am I now?</b></string>
    <string name="my_area_characteristics_title">River Catchment Characteristics</string>
    <string name="my_area_waterbody">Nearest River:</string>
    <string name="my_area_operational">Operational Catchment:</string>
    <string name="my_area_management">Management Catchment:</string>
    <string name="my_area_district">River Basin District:</string>
    <string name="my_area_permit_button">Show the Nearest\nPollution Licence\nHolder on the Map\n(%.2f km away)</string>
    <string name="my_area_wims_button">Show the Nearest\nWater Quality\nSample on the Map\n(%.2f km away)</string>

    <string name="my_area_unable_to_find_waterbody">You are currently not inside a registered river catchment</string>

    <string name="google_search_back_button">Navigate up</string>
    <string name="google_search_cancel_button">Clear search</string>
    <string name="google_search_input_field_holder">Search</string>
    <string name="google_map">Google Map</string>

    <string name="dialog_title">Search Condition</string>
    <string name="dialog_description">Search by any of the following:</string>

    <string name="dialog_region">Region Name</string>
    <string name="dialog_city">City Name</string>
    <string name="dialog_post_code">Post Code</string>
    <string name="dialog_street">Street Name</string>
    <string name="dialog_address">Exact Address</string>

    <string name="dialog_do_not_show_again">Do not show again</string>

    <string name="ok">OK</string>
    <!--Testing Only-->
    <string name="bristol_airport">Bristol Airport</string>
    
</resources>