...
    <android.support.v7.widget.Toolbar
        style="@style/toolbar_default"
        android:id="@+id/info_view_toolbar">

        <ImageButton
            style="@style/back_button"
            android:id="@+id/back_button_my_area_view"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
